adding password auth, hashing and migrating to sqlLite for  development on mac

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SensorAppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "DefaultConnection": "Data Source=SensorAppDatabase.db"
+    }
 }
