--- a/SensoreAPPMVC.csproj
+++ b/SensoreAPPMVC.csproj
@@ -8,5 +8,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.11"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.11"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.11"/>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Utilities/"/>
   </ItemGroup>
 </Project>
