--- a/SensoreAPPMVC.csproj
+++ b/SensoreAPPMVC.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Services/" />
     <Folder Include="Utilities/" />
   </ItemGroup>
 </Project>
